--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -135,8 +135,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 #
 opacity-rule = [
-    "80:class_g = 'Alacritty'",
- #   "95:class_g = 'firefox'",
+    "95:class_g = 'firefox'",
+    "80:class_g = 'kitty'",
 ];
 
 
